--- a/style.css
+++ b/style.css
@@ -162,3 +162,42 @@ footer p {
     width: 300px;
     margin: auto;
 }
+
+#clockdate {
+    
+}
+
+.clockdate-wrapper {
+    background-color: black;
+    padding: 25px;
+    max-width: 430px;
+    width: 100%;
+    text-align: center;
+    border-radius: 5px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+#clock {
+    background-color: black;
+    font-family: sans-serif;
+    font-size: 60px;
+    text-shadow: 0px 0px 1px #fff;
+    color: #fff;
+}
+
+#clock span {
+    color: #888;
+    text-shadow: 0px 0px 1px #333;
+    font-size: 30px;
+    position: relative;
+    top: -27px;
+    left: -10px;
+}
+
+#date {
+    letter-spacing: 10px;
+    font-size: 14px;
+    font-family: Arial, sans-serif;
+    color: #fff;
+}
